changes to hero section style
Changed font size and weight in h1 hero text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -316,17 +316,22 @@ main {
 }
 
 .container-hero-inner{
-    /*
-    max-width: 
-    margin:
-    padding:
-    */
+    
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 20px;
+    
 
     /* Flexbox for side-by-side layout */
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 50px;
+}
+
+.hero-text h1{
+    font-size: 48px;
+    font-weight: 900;
 }
 
 
