--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -368,6 +368,47 @@ main {
     user-select: none;
     text-decoration: none;
 }
+
+/*
+    ============================================
+            Random information section
+    ============================================
+*/
+.info-section {
+    padding: 50px 0 100px;
+    text-align: center;
+}
+
+.info-section h2{
+    font-size: 36px;
+    font-weight:900;
+    color:var(--bg-dark);
+    margin-bottom: 50px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap;
+}
+
+.info-item {
+    width: 160px;
+}
+
+.info-box {
+    width: 160px;
+    height: 160px;
+    border: 4px solid var(--accent);
+    border-radius: 15px;
+    margin-bottom: 8px;
+}
+
+.info-text {
+    font-size: 14px;
+    color: gray;
+}
 /*
     ============================================
             Quote/Testimonial section
