touchups to info section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -408,6 +408,7 @@ main {
 .info-text {
     font-size: 14px;
     color: gray;
+    text-align: center;
 }
 /*
     ============================================
