--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -860,11 +860,12 @@ footer {
 }
 
 .icon-placeholder {
-    height: 80px;
-    width: 80px;
-    border: 3px solid var(--accent);
-    border-radius: 50%;
-    margin: 0 auto 16px;
+
+    width: 160px;
+    height: 160px;
+    border: 4px solid var(--accent);
+    border-radius: 15px;
+    margin-bottom: 8px;
 }
 
 .value-item h3 {
